Fixed overflowing text in progressbar. Use ellipsis when text too long.

--- a/less/style/blocks/progressbar.less
+++ b/less/style/blocks/progressbar.less
@@ -21,6 +21,11 @@
 }
 
 .progressbar__description {
+  padding-right: 110px;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  text-overflow: ellipsis;
   position: absolute;
   margin-left: 4px;
   color: @color-white;
